# MuJoCoPlayground

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.mujoco  README.md  conanfile.txt
cmake/: FindMuJoCo.cmake
models/: pendulum.xml
scripts/: fetch_menagerie_g1.sh  run_demo.sh  run_offscreen.sh
src/: main.cpp  offscreen.cpp  viewer.cpp
